Fix generated file names.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1007 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,7 @@
+2009-09-15  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/preprocess.R (preprocessReut21578XML): Fix generated file names.
+
 2009-09-06  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/: Use S3 instead of S4 class system.
