Allow lower case Dublin Core tags.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1011 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-19  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/meta.R (DublinCore): Allow lower case tags.
+
 2009-10-09  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/source.R (GmaneSource, ReutersSource): Use xmlChildren(x)
