Improve regular expressions in removeWords().
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1013 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-21  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/transform.R (removeWords): Improve regular expressions.
+
 2009-10-19  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/meta.R (DublinCore): Allow lower case tags.
