Avoid prefixes from named documents when building a term-document matrix.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1015 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-07  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/matrix.R (TermDocumentMatrix): Avoid prefixes originating from
+	named documents.
+
 2009-10-21  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/transform.R (removeWords): Improve regular expressions.
