Fix bug in removeWords(). Refactoring of term-document matrix constructor. Clean up of defunct functions.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1018 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,9 @@
+2009-11-14  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/transform.R (removeWords.PlainTextDocument): Fix bug which
+	caused words at the beginning or the end of a line not to be removed. Do
+	not delete whitespace anymore.
+
 2009-11-12  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/source.R (DirSource): Default to working directory if no path
