--- a/pkg/inst/NEWS
+++ b/pkg/inst/NEWS
@@ -1,5 +1,19 @@
                         Dear Emacs, please make this -*-Text-*- mode!
 
+                CHANGES IN tm VERSION 0.5-2
+
+DEPRECATED & DEFUNCT
+
+    o   Following functions have been removed:
+
+          CSVSource()     (use DataframeSource(read.csv(..., stringsAsFactors = FALSE)) instead), and
+          TermDocMatrix() (use DocumentTermMatrix() instead).
+
+BUG FIXES
+
+    o   removeWords() no longer skips words at the beginning or the end
+        of a line. Reported by Mark Kimpel.
+
                 CHANGES IN tm VERSION 0.5-1
 
 BUG FIXES
