Use whitespace oriented tokenizer instead of AlphabeticTokenizer (from RWeka) as default.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1019 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-15  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/matrix.R (tokenize): Use scan(..., what = "character") instead
+	of RWeka:AlphabeticTokenizer() as default.
+
 2009-11-14  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/transform.R (removeWords.PlainTextDocument): Fix bug which
