Use \dontrun{} in plot.TermDocumentMatrix \examples{} section in the hope that CRAN Mac OS X builds do not fail any longer due to missing Rgraphviz dependencies.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1020 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-17  Ingo Feinerer  <feinerer@logic.at>
+
+	* man/plot.Rd: Use \dontrun{} in \examples{} section in the hope
+	that CRAN Mac OS X builds do not fail any longer.
+
 2009-11-15  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/matrix.R (tokenize): Use scan(..., what = "character") instead
