Register S3 corpus classes to be recognized by S4 methods.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1021 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,5 +1,8 @@
 2009-11-17  Ingo Feinerer  <feinerer@logic.at>
 
+	* R/corpus.R (setOldClass): Register S3 corpus classes to be
+	recognized by S4 methods.
+
 	* man/plot.Rd: Use \dontrun{} in \examples{} section in the hope
 	that CRAN Mac OS X builds do not fail any longer.
 
