Added a combine method for merging multiple term-document matrices.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1022 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-19  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/matrix.R (c.TermDocumentMatrix): Added combine method for
+	merging multiple term-document matrices.
+
 2009-11-17  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/corpus.R (setOldClass): Register S3 corpus classes to be
