Register S3 document classes to be recognized by S4 methods.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1025 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2009-12-11  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/doc.R (setOldClass): Register S3 document classes to be
+	recognized by S4 methods.
+
 2009-11-25  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/matrix.R (termFreq): Add option to remove punctuation
