Use encoding argument in URISource.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1029 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,7 @@
+2009-12-22  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/source.R (getElem.URISource): Use encoding argument.
+
 2009-12-11  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/doc.R (setOldClass): Register S3 document classes to be
