Extract more meta data from Reuters Corpus Volume 1 data set.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1038 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2010-01-15  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/reader.R (readReut21578XML, readRCV1): Extract more meta
+	data.
+
 2010-01-12  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/doc.R (`Content<-`): Be careful with names attribute.
