--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-06  Ingo Feinerer  <feinerer@logic.at>
+
+	* DESCRIPTION (Depends): Depend on R (>= 2.10.0) to ensure that
+	setOldClass(c(..., "list")) works.
+
 2010-01-22  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/transform.R (stemDocument.character): In case input is a
