Prepare for new CRAN release.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1042 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/NEWS
+++ b/pkg/inst/NEWS
@@ -7,6 +7,8 @@ NEW FEATURES
     o The reader function readRCV1asPlain() was added and combines the
       functionality of readRCV1() and as.PlainTextDocument().
 
+    o The function stemCompletion() has a set of new heuristics.
+
                 CHANGES IN tm VERSION 0.5-2
 
 SIGNIFICANT USER-VISIBLE CHANGES
