Add option to normalize tf-idf weightings.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1051 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,5 +1,7 @@
 2010-03-03  Ingo Feinerer  <feinerer@logic.at>
 
+	* R/weight.R (weightTfIdf): Added normalization option.
+
 	* man/tm_tag_score.Rd: Add General Inquirer example for sentiment
 	analysis.
 
