Extract TOPICS, LEWISSPLIT, CGISPLIT, and OLDID meta tags from Reuters-21578 documents
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1061 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2010-03-19  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/reader.R (readReut21578XML, readReut21578XMLasPlain): Extract
+	TOPICS, LEWISSPLIT, CGISPLIT, and OLDID meta tags.
+
 2010-03-03  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/weight.R (weightTfIdf): Added normalization option.
