content_or_meta utility function
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1062 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-07  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/meta.R (`content_or_meta`): Utility function.
+
 2010-03-19  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/reader.R (readReut21578XML, readReut21578XMLasPlain): Extract
