Use element names as document IDs if provided by a source
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1070 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-18  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/corpus.R (Corpus, PCorpus): Use element names as IDs if
+	provided by a source.
+
 2010-04-09  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/source.R (.Source): Provide document names.
