Use all words from a dictionary when tabulating against it in a term-document matrix
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1080 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-17  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/matrix.R (TermDocumentMatrix): If a dictionary is given do not
+	remove terms not occurring in the corpus anymore.
+
 2010-06-02  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/plot.R (Zipf_plot, Heaps_plot): Plotting functions for Zipf's
