Use the \code{recursive} argument to determine whether meta data is used when merging corpora
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1095 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,9 @@
+2010-08-25  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/corpus.R (c.Corpus): When concatenating corpora, the argument
+	\code{recursive} now determines whether existing corpus meta data
+	is used.
+
 2010-08-06  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/transform.R: Removed convert_UTF_8(). Use enc2utf8() instead.
