--- a/pkg/inst/NEWS
+++ b/pkg/inst/NEWS
@@ -1,5 +1,13 @@
                         Dear Emacs, please make this -*-Text-*- mode!
 
+                CHANGES IN tm VERSION 0.5-5
+
+BUG FIXES
+
+    o   The function findFreqTerms() now checks bounds on a global level
+        (to comply with the manual page) instead per document. Reported
+        and fixed by Thomas Zapf-Schramm.
+
                 CHANGES IN tm VERSION 0.5-4
 
 SIGNIFICANT USER-VISIBLE CHANGES
