Access documents by their document ID
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1102 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2010-10-16  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/corpus.R (`[[.VCorpus`, `[[.PCorpus'): Access individual
+	documents by document ID.
+
 2010-08-25  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/corpus.R (c.Corpus): When concatenating corpora, the argument
