Use correct terminology
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1104 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/NEWS
+++ b/pkg/inst/NEWS
@@ -5,7 +5,7 @@
 NEW FEATURES
 
     o   Access a document in a corpus via its document ID, i.e.,
-        allow a character for the corpus operator `[[`.
+        allow a string for the corpus operator `[[`.
 
 BUG FIXES
 
