Describe document access via $
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1105 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/doc/tm.Rnw
+++ b/pkg/inst/doc/tm.Rnw
@@ -132,9 +132,11 @@ of text documents is displayed with \code{inspect()}.
 inspect(ovid[1:2])
 @
 Individual documents can be accessed via \code{[[}, either via the
-position in the corpus, or via its document ID.
-<<>>=
-identical(ovid[[2]], ovid[["ovid_2.txt"]])
+position in the corpus, or via its document ID, or via \code{\$} with
+their name.
+<<keep.source=TRUE>>=
+identical(ovid[[2]], ovid[["ovid_2.txt"]]) &&
+identical(ovid[[2]], ovid$`ovid_2.txt`)
 @
 
 \section*{Transformations}
