Change Weighting from list element to attribute, access documents by name
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1108 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,7 +1,12 @@
+2010-10-22  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/matrix.R (.TermDocumentMatrix): Make Weighting an attribute
+	(instead of a list element).
+
 2010-10-16  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/corpus.R (`[[.VCorpus`, `[[.PCorpus'): Access individual
-	documents by document ID.
+	documents by names (fallback to IDs if names are not set).
 
 2010-08-25  Ingo Feinerer  <feinerer@logic.at>
 
