Clarify new feature description
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1111 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/inst/NEWS
+++ b/pkg/inst/NEWS
@@ -4,8 +4,8 @@
 
 NEW FEATURES
 
-    o   Access a document in a corpus via its document ID, i.e.,
-        allow a string for the corpus operator `[[`.
+    o   Access documents in a corpus by names (fallback to IDs if names are
+        not set), i.e., allow a string for the corpus operator `[[`.
 
 BUG FIXES
 
