Allow init and exit hooks for readers
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1114 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,7 @@
+2010-11-26  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/corpus.R (Corpus): Allow init and exit hooks for readers.
+
 2010-10-22  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/matrix.R (.TermDocumentMatrix): Make Weighting an attribute
