Sources now store strings and connections instead of unevaluated calls. Improve documentation.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1117 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2011-02-04  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/source.R: Store strings and connections instead of unevaluated
+	calls.
+
 2010-11-26  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/corpus.R (Corpus): Allow init and exit hooks for readers.
