Bug fix. Use language argument for stemDocument().
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1121 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2011-02-17  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/transform.R (stemDocument.PlainTextDocument): Use language
+	argument.
+
 2011-02-04  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/source.R: Store strings and connections instead of unevaluated
